comelang2/parser.output
Terminals which are not used

   KW_ALIGNOF
   KW_AUTO_TYPE
   KW_EXTENSION
   LSHIFT
   RSHIFT
   '?'
   '|'
   '^'
   '!'
   '~'


Rules never reduced

   47 declarator_opt: declarator

   66 parameter_type_list_opt: /* empty */

  119 function_declspec: KW_INT
  120                  | declaration_specifiers


State 3 conflicts: 1 reduce/reduce
State 37 conflicts: 1 reduce/reduce
State 45 conflicts: 1 shift/reduce, 2 reduce/reduce
State 70 conflicts: 17 reduce/reduce
State 113 conflicts: 2 shift/reduce
State 114 conflicts: 1 shift/reduce
State 116 conflicts: 3 shift/reduce
State 119 conflicts: 1 shift/reduce
State 136 conflicts: 1 shift/reduce
State 207 conflicts: 1 reduce/reduce
State 224 conflicts: 2 shift/reduce, 2 reduce/reduce
State 396 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: /* empty */
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition
    4                     | declaration ';'
    5                     | static_assert_declaration
    6                     | simple_function_definition

    7 declaration: declaration_specifiers declarator_opt
    8            | declaration_specifiers init_declarator_list

    9 declaration_specifiers: declaration_specifier
   10                       | declaration_specifiers declaration_specifier

   11 declaration_specifier: storage_class_specifier
   12                      | type_specifier
   13                      | type_qualifier
   14                      | function_specifier
   15                      | alignment_specifier
   16                      | attribute_specifier
   17                      | declspec_specifier

   18 storage_class_specifier: KW_TYPEDEF
   19                        | KW_EXTERN
   20                        | KW_STATIC
   21                        | KW_THREAD_LOCAL
   22                        | KW_AUTO
   23                        | KW_REGISTER

   24 type_qualifier: KW_CONST
   25               | KW_VOLATILE
   26               | KW_RESTRICT
   27               | KW_ATOMIC

   28 function_specifier: KW_INLINE
   29                   | KW_NORETURN

   30 alignment_specifier: KW_ALIGNAS '(' type_specifier ')'
   31                    | KW_ALIGNAS '(' INTEGER_CONSTANT ')'

   32 attribute_specifier: KW_ATTRIBUTE '(' attribute_arg_list_opt ')'

   33 declspec_specifier: KW_DECLSPEC '(' attribute_arg_list_opt ')'

   34 attribute_arg_list_opt: /* empty */
   35                       | attribute_arg_list

   36 attribute_arg_list: attribute_arg
   37                   | attribute_arg_list ',' attribute_arg

   38 attribute_arg: IDENTIFIER
   39              | STRING_LITERAL
   40              | INTEGER_CONSTANT
   41              | '(' attribute_arg_list_opt ')'

   42 init_declarator_list: init_declarator
   43                     | init_declarator_list ',' init_declarator

   44 init_declarator: declarator
   45                | declarator '=' initializer

   46 declarator_opt: /* empty */
   47               | declarator

   48 declarator: pointer_opt direct_declarator

   49 pointer_opt: /* empty */
   50            | pointer

   51 pointer: '*'
   52        | '*' type_qualifier_list
   53        | '*' pointer
   54        | '*' type_qualifier_list pointer

   55 type_qualifier_list: type_qualifier
   56                    | type_qualifier_list type_qualifier

   57 direct_declarator: IDENTIFIER
   58                  | '(' declarator ')'
   59                  | direct_declarator '[' assignment_expression_opt ']'
   60                  | direct_declarator '(' parameter_type_list_opt ')'
   61                  | direct_declarator '(' identifier_list_opt ')'

   62 identifier_list_opt: /* empty */
   63                    | identifier_list

   64 identifier_list: IDENTIFIER
   65                | identifier_list ',' IDENTIFIER

   66 parameter_type_list_opt: /* empty */
   67                        | parameter_type_list

   68 parameter_type_list: parameter_list
   69                    | parameter_list ',' ELLIPSIS

   70 parameter_list: parameter_declaration
   71               | parameter_list ',' parameter_declaration

   72 parameter_declaration: declaration_specifiers declarator
   73                      | declaration_specifiers

   74 type_specifier: KW_VOID
   75               | KW_CHAR
   76               | KW_SHORT
   77               | KW_INT
   78               | KW_LONG
   79               | KW_FLOAT
   80               | KW_DOUBLE
   81               | KW_SIGNED
   82               | KW_UNSIGNED
   83               | KW_BOOL
   84               | KW_COMPLEX
   85               | KW_IMAGINARY
   86               | struct_or_union_specifier
   87               | enum_specifier
   88               | KW_TYPEOF '(' type_specifier ')'

   89 specifier_qualifier_list: type_specifier
   90                         | type_qualifier
   91                         | specifier_qualifier_list type_specifier
   92                         | specifier_qualifier_list type_qualifier

   93 struct_or_union_specifier: KW_STRUCT IDENTIFIER
   94                          | KW_UNION IDENTIFIER
   95                          | KW_STRUCT '{' struct_declaration_list '}'
   96                          | KW_UNION '{' struct_declaration_list '}'
   97                          | KW_STRUCT IDENTIFIER '{' struct_declaration_list '}'
   98                          | KW_UNION IDENTIFIER '{' struct_declaration_list '}'

   99 struct_declaration_list: struct_declaration
  100                        | struct_declaration_list struct_declaration

  101 struct_declaration: specifier_qualifier_list struct_declarator_list ';'
  102                   | static_assert_declaration

  103 struct_declarator_list: struct_declarator
  104                       | struct_declarator_list ',' struct_declarator

  105 struct_declarator: declarator
  106                  | ':' constant_expression
  107                  | declarator ':' constant_expression

  108 enum_specifier: KW_ENUM IDENTIFIER
  109               | KW_ENUM '{' enumerator_list_opt '}'
  110               | KW_ENUM IDENTIFIER '{' enumerator_list_opt '}'

  111 enumerator_list_opt: /* empty */
  112                    | enumerator_list

  113 enumerator_list: enumerator
  114                | enumerator_list ',' enumerator
  115                | enumerator_list ','

  116 enumerator: IDENTIFIER
  117           | IDENTIFIER '=' constant_expression

  118 simple_function_definition: function_declspec IDENTIFIER '(' simple_param_list_opt ')' compound_statement

  119 function_declspec: KW_INT
  120                  | declaration_specifiers

  121 simple_param_list_opt: /* empty */
  122                      | simple_param_list

  123 simple_param_list: simple_param
  124                  | simple_param_list ',' simple_param

  125 simple_param: declaration_specifiers pointer_opt IDENTIFIER
  126             | declaration_specifiers pointer_opt

  127 function_definition: type_specifier declarator compound_statement

  128 compound_statement: '{' block_item_list_opt '}'

  129 block_item_list_opt: /* empty */
  130                    | block_item_list

  131 block_item_list: block_item
  132                | block_item_list block_item

  133 block_item: declaration ';'
  134           | statement

  135 asm_statement: KW_ASM asm_qualifiers_opt '(' asm_arguments ')' ';'

  136 asm_qualifiers_opt: /* empty */
  137                   | asm_qualifiers_opt KW_VOLATILE
  138                   | asm_qualifiers_opt KW_INLINE
  139                   | asm_qualifiers_opt KW_GOTO

  140 asm_arguments: string_seq
  141              | string_seq ':' asm_output_operands_opt
  142              | string_seq ':' asm_output_operands_opt ':' asm_input_operands_opt
  143              | string_seq ':' asm_output_operands_opt ':' asm_input_operands_opt ':' asm_clobbers_opt
  144              | string_seq ':' asm_output_operands_opt ':' asm_input_operands_opt ':' asm_clobbers_opt ':' asm_goto_labels_opt

  145 asm_output_operands_opt: /* empty */
  146                        | asm_output_operands

  147 asm_input_operands_opt: /* empty */
  148                       | asm_input_operands

  149 asm_clobbers_opt: /* empty */
  150                 | asm_clobbers

  151 asm_goto_labels_opt: /* empty */
  152                    | asm_goto_labels

  153 asm_output_operands: asm_output_operand
  154                    | asm_output_operands ',' asm_output_operand

  155 asm_input_operands: asm_input_operand
  156                   | asm_input_operands ',' asm_input_operand

  157 asm_output_operand: asm_symbolic_name_opt STRING_LITERAL '(' unary_expression ')'

  158 asm_input_operand: asm_symbolic_name_opt STRING_LITERAL '(' assignment_expression ')'

  159 asm_symbolic_name_opt: /* empty */
  160                      | '[' IDENTIFIER ']'

  161 asm_clobbers: STRING_LITERAL
  162             | asm_clobbers ',' STRING_LITERAL

  163 asm_goto_labels: IDENTIFIER
  164                | asm_goto_labels ',' IDENTIFIER

  165 static_assert_declaration: KW_STATIC_ASSERT '(' conditional_expression ',' STRING_LITERAL ')' ';'

  166 statement: ';'
  167          | expression ';'
  168          | KW_RETURN expression_opt ';'
  169          | compound_statement
  170          | labeled_statement
  171          | KW_IF '(' expression ')' statement
  172          | KW_IF '(' expression ')' statement KW_ELSE statement
  173          | KW_WHILE '(' expression ')' statement
  174          | KW_DO statement KW_WHILE '(' expression ')' ';'
  175          | KW_FOR '(' expression_opt ';' expression_opt ';' expression_opt ')' statement
  176          | KW_FOR '(' declaration expression_opt ';' expression_opt ')' statement
  177          | KW_SWITCH '(' expression ')' statement
  178          | KW_BREAK ';'
  179          | KW_CONTINUE ';'
  180          | KW_GOTO IDENTIFIER ';'
  181          | asm_statement

  182 labeled_statement: IDENTIFIER ':' statement
  183                  | KW_CASE constant_expression ':' statement
  184                  | KW_DEFAULT ':' statement

  185 expression_opt: /* empty */
  186               | expression

  187 expression: assignment_expression

  188 assignment_expression: conditional_expression
  189                      | unary_expression '=' assignment_expression
  190                      | unary_expression ADD_ASSIGN assignment_expression
  191                      | unary_expression SUB_ASSIGN assignment_expression
  192                      | unary_expression MUL_ASSIGN assignment_expression
  193                      | unary_expression DIV_ASSIGN assignment_expression
  194                      | unary_expression MOD_ASSIGN assignment_expression
  195                      | unary_expression AND_ASSIGN assignment_expression
  196                      | unary_expression OR_ASSIGN assignment_expression
  197                      | unary_expression XOR_ASSIGN assignment_expression
  198                      | unary_expression LSHIFT_ASSIGN assignment_expression
  199                      | unary_expression RSHIFT_ASSIGN assignment_expression

  200 conditional_expression: logical_or_expression

  201 logical_or_expression: logical_and_expression
  202                      | logical_or_expression LOGOR logical_and_expression

  203 logical_and_expression: equality_expression
  204                       | logical_and_expression LOGAND equality_expression

  205 equality_expression: relational_expression
  206                    | equality_expression EQ relational_expression
  207                    | equality_expression NE relational_expression

  208 relational_expression: additive_expression
  209                      | relational_expression '<' additive_expression
  210                      | relational_expression '>' additive_expression
  211                      | relational_expression LE additive_expression
  212                      | relational_expression GE additive_expression

  213 additive_expression: multiplicative_expression
  214                    | additive_expression '+' multiplicative_expression
  215                    | additive_expression '-' multiplicative_expression

  216 multiplicative_expression: unary_expression
  217                          | multiplicative_expression '*' unary_expression
  218                          | multiplicative_expression '/' unary_expression
  219                          | multiplicative_expression '%' unary_expression

  220 unary_expression: postfix_expression
  221                 | INC unary_expression
  222                 | DEC unary_expression
  223                 | '&' unary_expression
  224                 | '*' unary_expression
  225                 | '+' unary_expression
  226                 | '-' unary_expression
  227                 | KW_SIZEOF unary_expression
  228                 | KW_SIZEOF '(' type_specifier ')'
  229                 | KW_TYPEOF '(' expression ')'

  230 postfix_expression: primary_expression
  231                   | postfix_expression '(' argument_expression_list_opt ')'
  232                   | postfix_expression INC
  233                   | postfix_expression DEC
  234                   | postfix_expression '[' expression ']'
  235                   | postfix_expression '.' IDENTIFIER
  236                   | postfix_expression ARROW IDENTIFIER
  237                   | KW_GENERIC '(' assignment_expression ',' assignment_expression ')'

  238 argument_expression_list_opt: /* empty */
  239                             | argument_expression_list

  240 argument_expression_list: assignment_expression
  241                         | argument_expression_list ',' assignment_expression

  242 primary_expression: IDENTIFIER
  243                   | constant
  244                   | string_seq
  245                   | '(' expression ')'
  246                   | LPAREN_BRACE compound_statement ')'

  247 constant: INTEGER_CONSTANT
  248         | FLOAT_CONSTANT
  249         | CHAR_CONSTANT

  250 string_seq: STRING_LITERAL
  251           | string_seq STRING_LITERAL

  252 assignment_expression_opt: /* empty */
  253                          | assignment_expression

  254 initializer: assignment_expression
  255            | '{' initializer_list '}'
  256            | '{' initializer_list ',' '}'

  257 initializer_list: designation_opt initializer
  258                 | initializer_list ',' designation_opt initializer

  259 designation_opt: /* empty */
  260                | designation

  261 designation: designator_list '='

  262 designator_list: designator
  263                | designator_list designator

  264 designator: '.' IDENTIFIER
  265           | '[' constant_expression ']'

  266 constant_expression: conditional_expression


Terminals, with rules where they appear

$end (0) 0
'!' (33)
'%' (37) 219
'&' (38) 223
'(' (40) 30 31 32 33 41 58 60 61 88 118 135 157 158 165 171 172 173
    174 175 176 177 228 229 231 237 245
')' (41) 30 31 32 33 41 58 60 61 88 118 135 157 158 165 171 172 173
    174 175 176 177 228 229 231 237 245 246
'*' (42) 51 52 53 54 217 224
'+' (43) 214 225
',' (44) 37 43 65 69 71 104 114 115 124 154 156 162 164 165 237 241
    256 258
'-' (45) 215 226
'.' (46) 235 264
'/' (47) 218
':' (58) 106 107 141 142 143 144 182 183 184
';' (59) 4 101 133 135 165 166 167 168 174 175 176 178 179 180
'<' (60) 209
'=' (61) 45 117 189 261
'>' (62) 210
'?' (63)
'[' (91) 59 160 234 265
']' (93) 59 160 234 265
'^' (94)
'{' (123) 95 96 97 98 109 110 128 255 256
'|' (124)
'}' (125) 95 96 97 98 109 110 128 255 256
'~' (126)
error (256)
IDENTIFIER (258) 38 57 64 65 93 94 97 98 108 110 116 117 118 125 160
    163 164 180 182 235 236 242 264
STRING_LITERAL (259) 39 157 158 161 162 165 250 251
INTEGER_CONSTANT (260) 31 40 247
FLOAT_CONSTANT (261) 248
CHAR_CONSTANT (262) 249
KW_INT (263) 77 119
KW_CHAR (264) 75
KW_VOID (265) 74
KW_FLOAT (266) 79
KW_DOUBLE (267) 80
KW_SHORT (268) 76
KW_LONG (269) 78
KW_SIGNED (270) 81
KW_UNSIGNED (271) 82
KW_BOOL (272) 83
KW_COMPLEX (273) 84
KW_IMAGINARY (274) 85
KW_STRUCT (275) 93 95 97
KW_UNION (276) 94 96 98
KW_ENUM (277) 108 109 110
KW_TYPEDEF (278) 18
KW_RETURN (279) 168
KW_IF (280) 171 172
KW_ELSE (281) 172
KW_WHILE (282) 173 174
KW_FOR (283) 175 176
KW_DO (284) 174
KW_SWITCH (285) 177
KW_CASE (286) 183
KW_DEFAULT (287) 184
KW_BREAK (288) 178
KW_CONTINUE (289) 179
KW_GOTO (290) 139 180
KW_SIZEOF (291) 227 228
KW_ALIGNAS (292) 30 31
KW_ALIGNOF (293)
KW_NORETURN (294) 29
KW_THREAD_LOCAL (295) 21
KW_ATOMIC (296) 27
KW_CONST (297) 24
KW_VOLATILE (298) 25 137
KW_RESTRICT (299) 26
KW_INLINE (300) 28 138
KW_EXTERN (301) 19
KW_STATIC (302) 20
KW_REGISTER (303) 23
KW_AUTO (304) 22
KW_STATIC_ASSERT (305) 165
KW_GENERIC (306) 237
KW_TYPEOF (307) 88 229
KW_AUTO_TYPE (308)
KW_ATTRIBUTE (309) 32
KW_DECLSPEC (310) 33
KW_EXTENSION (311)
KW_ASM (312) 135
ELLIPSIS (313) 69
ARROW (314) 236
INC (315) 221 232
DEC (316) 222 233
LSHIFT (317)
RSHIFT (318)
LE (319) 211
GE (320) 212
EQ (321) 206
NE (322) 207
LOGAND (323) 204
LOGOR (324) 202
ADD_ASSIGN (325) 190
SUB_ASSIGN (326) 191
MUL_ASSIGN (327) 192
DIV_ASSIGN (328) 193
MOD_ASSIGN (329) 194
AND_ASSIGN (330) 195
OR_ASSIGN (331) 196
XOR_ASSIGN (332) 197
LSHIFT_ASSIGN (333) 198
RSHIFT_ASSIGN (334) 199
LPAREN_BRACE (335) 246


Nonterminals, with rules where they appear

$accept (105)
    on left: 0
translation_unit (106)
    on left: 1 2, on right: 0 2
external_declaration (107)
    on left: 3 4 5 6, on right: 2
declaration (108)
    on left: 7 8, on right: 4 133 176
declaration_specifiers (109)
    on left: 9 10, on right: 7 8 10 72 73 120 125 126
declaration_specifier (110)
    on left: 11 12 13 14 15 16 17, on right: 9 10
storage_class_specifier (111)
    on left: 18 19 20 21 22 23, on right: 11
type_qualifier (112)
    on left: 24 25 26 27, on right: 13 55 56 90 92
function_specifier (113)
    on left: 28 29, on right: 14
alignment_specifier (114)
    on left: 30 31, on right: 15
attribute_specifier (115)
    on left: 32, on right: 16
declspec_specifier (116)
    on left: 33, on right: 17
attribute_arg_list_opt (117)
    on left: 34 35, on right: 32 33 41
attribute_arg_list (118)
    on left: 36 37, on right: 35 37
attribute_arg (119)
    on left: 38 39 40 41, on right: 36 37
init_declarator_list (120)
    on left: 42 43, on right: 8 43
init_declarator (121)
    on left: 44 45, on right: 42 43
declarator_opt (122)
    on left: 46 47, on right: 7
declarator (123)
    on left: 48, on right: 44 45 47 58 72 105 107 127
pointer_opt (124)
    on left: 49 50, on right: 48 125 126
pointer (125)
    on left: 51 52 53 54, on right: 50 53 54
type_qualifier_list (126)
    on left: 55 56, on right: 52 54 56
direct_declarator (127)
    on left: 57 58 59 60 61, on right: 48 59 60 61
identifier_list_opt (128)
    on left: 62 63, on right: 61
identifier_list (129)
    on left: 64 65, on right: 63 65
parameter_type_list_opt (130)
    on left: 66 67, on right: 60
parameter_type_list (131)
    on left: 68 69, on right: 67
parameter_list (132)
    on left: 70 71, on right: 68 69 71
parameter_declaration (133)
    on left: 72 73, on right: 70 71
type_specifier (134)
    on left: 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88,
    on right: 12 30 88 89 91 127 228
specifier_qualifier_list (135)
    on left: 89 90 91 92, on right: 91 92 101
struct_or_union_specifier (136)
    on left: 93 94 95 96 97 98, on right: 86
struct_declaration_list (137)
    on left: 99 100, on right: 95 96 97 98 100
struct_declaration (138)
    on left: 101 102, on right: 99 100
struct_declarator_list (139)
    on left: 103 104, on right: 101 104
struct_declarator (140)
    on left: 105 106 107, on right: 103 104
enum_specifier (141)
    on left: 108 109 110, on right: 87
enumerator_list_opt (142)
    on left: 111 112, on right: 109 110
enumerator_list (143)
    on left: 113 114 115, on right: 112 114 115
enumerator (144)
    on left: 116 117, on right: 113 114
simple_function_definition (145)
    on left: 118, on right: 6
function_declspec (146)
    on left: 119 120, on right: 118
simple_param_list_opt (147)
    on left: 121 122, on right: 118
simple_param_list (148)
    on left: 123 124, on right: 122 124
simple_param (149)
    on left: 125 126, on right: 123 124
function_definition (150)
    on left: 127, on right: 3
compound_statement (151)
    on left: 128, on right: 118 127 169 246
block_item_list_opt (152)
    on left: 129 130, on right: 128
block_item_list (153)
    on left: 131 132, on right: 130 132
block_item (154)
    on left: 133 134, on right: 131 132
asm_statement (155)
    on left: 135, on right: 181
asm_qualifiers_opt (156)
    on left: 136 137 138 139, on right: 135 137 138 139
asm_arguments (157)
    on left: 140 141 142 143 144, on right: 135
asm_output_operands_opt (158)
    on left: 145 146, on right: 141 142 143 144
asm_input_operands_opt (159)
    on left: 147 148, on right: 142 143 144
asm_clobbers_opt (160)
    on left: 149 150, on right: 143 144
asm_goto_labels_opt (161)
    on left: 151 152, on right: 144
asm_output_operands (162)
    on left: 153 154, on right: 146 154
asm_input_operands (163)
    on left: 155 156, on right: 148 156
asm_output_operand (164)
    on left: 157, on right: 153 154
asm_input_operand (165)
    on left: 158, on right: 155 156
asm_symbolic_name_opt (166)
    on left: 159 160, on right: 157 158
asm_clobbers (167)
    on left: 161 162, on right: 150 162
asm_goto_labels (168)
    on left: 163 164, on right: 152 164
static_assert_declaration (169)
    on left: 165, on right: 5 102
statement (170)
    on left: 166 167 168 169 170 171 172 173 174 175 176 177 178 179
    180 181, on right: 134 171 172 173 174 175 176 177 182 183 184
labeled_statement (171)
    on left: 182 183 184, on right: 170
expression_opt (172)
    on left: 185 186, on right: 168 175 176
expression (173)
    on left: 187, on right: 167 171 172 173 174 177 186 229 234 245
assignment_expression (174)
    on left: 188 189 190 191 192 193 194 195 196 197 198 199,
    on right: 158 187 189 190 191 192 193 194 195 196 197 198 199 237
    240 241 253 254
conditional_expression (175)
    on left: 200, on right: 165 188 266
logical_or_expression (176)
    on left: 201 202, on right: 200 202
logical_and_expression (177)
    on left: 203 204, on right: 201 202 204
equality_expression (178)
    on left: 205 206 207, on right: 203 204 206 207
relational_expression (179)
    on left: 208 209 210 211 212, on right: 205 206 207 209 210 211
    212
additive_expression (180)
    on left: 213 214 215, on right: 208 209 210 211 212 214 215
multiplicative_expression (181)
    on left: 216 217 218 219, on right: 213 214 215 217 218 219
unary_expression (182)
    on left: 220 221 222 223 224 225 226 227 228 229,
    on right: 157 189 190 191 192 193 194 195 196 197 198 199 216 217
    218 219 221 222 223 224 225 226 227
postfix_expression (183)
    on left: 230 231 232 233 234 235 236 237, on right: 220 231 232
    233 234 235 236
argument_expression_list_opt (184)
    on left: 238 239, on right: 231
argument_expression_list (185)
    on left: 240 241, on right: 239 241
primary_expression (186)
    on left: 242 243 244 245 246, on right: 230
constant (187)
    on left: 247 248 249, on right: 243
string_seq (188)
    on left: 250 251, on right: 140 141 142 143 144 244 251
assignment_expression_opt (189)
    on left: 252 253, on right: 59
initializer (190)
    on left: 254 255 256, on right: 45 257 258
initializer_list (191)
    on left: 257 258, on right: 255 256 258
designation_opt (192)
    on left: 259 260, on right: 257 258
designation (193)
    on left: 261, on right: 260
designator_list (194)
    on left: 262 263, on right: 261 263
designator (195)
    on left: 264 265, on right: 262 263
constant_expression (196)
    on left: 266, on right: 106 107 117 183 265


state 0

    0 $accept: . translation_unit $end

    $default  reduce using rule 1 (translation_unit)

    translation_unit  go to state 1


state 1

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end              shift, and go to state 2
    KW_INT            shift, and go to state 3
    KW_CHAR           shift, and go to state 4
    KW_VOID           shift, and go to state 5
    KW_FLOAT          shift, and go to state 6
    KW_DOUBLE         shift, and go to state 7
    KW_SHORT          shift, and go to state 8
    KW_LONG           shift, and go to state 9
    KW_SIGNED         shift, and go to state 10
    KW_UNSIGNED       shift, and go to state 11
    KW_BOOL           shift, and go to state 12
    KW_COMPLEX        shift, and go to state 13
    KW_IMAGINARY      shift, and go to state 14
    KW_STRUCT         shift, and go to state 15
    KW_UNION          shift, and go to state 16
    KW_ENUM           shift, and go to state 17
    KW_TYPEDEF        shift, and go to state 18
    KW_ALIGNAS        shift, and go to state 19
    KW_NORETURN       shift, and go to state 20
    KW_THREAD_LOCAL   shift, and go to state 21
    KW_ATOMIC         shift, and go to state 22
    KW_CONST          shift, and go to state 23
    KW_VOLATILE       shift, and go to state 24
    KW_RESTRICT       shift, and go to state 25
    KW_INLINE         shift, and go to state 26
    KW_EXTERN         shift, and go to state 27
    KW_STATIC         shift, and go to state 28
    KW_REGISTER       shift, and go to state 29
    KW_AUTO           shift, and go to state 30
    KW_STATIC_ASSERT  shift, and go to state 31
    KW_TYPEOF         shift, and go to state 32
    KW_ATTRIBUTE      shift, and go to state 33
    KW_DECLSPEC       shift, and go to state 34

    external_declaration        go to state 35
    declaration                 go to state 36
    declaration_specifiers      go to state 37
    declaration_specifier       go to state 38
    storage_class_specifier     go to state 39
    type_qualifier              go to state 40
    function_specifier          go to state 41
    alignment_specifier         go to state 42
    attribute_specifier         go to state 43
    declspec_specifier          go to state 44
    type_specifier              go to state 45
    struct_or_union_specifier   go to state 46
    enum_specifier              go to state 47
    simple_function_definition  go to state 48
    function_declspec           go to state 49
    function_definition         go to state 50
    static_assert_declaration   go to state 51


state 2

    0 $accept: translation_unit $end .

    $default  accept


state 3

   77 type_specifier: KW_INT .
  119 function_declspec: KW_INT .

    IDENTIFIER  reduce using rule 77 (type_specifier)
    IDENTIFIER  [reduce using rule 119 (function_declspec)]
    $default    reduce using rule 77 (type_specifier)


state 4

   75 type_specifier: KW_CHAR .

    $default  reduce using rule 75 (type_specifier)


state 5

   74 type_specifier: KW_VOID .

    $default  reduce using rule 74 (type_specifier)


state 6

   79 type_specifier: KW_FLOAT .

    $default  reduce using rule 79 (type_specifier)


state 7

   80 type_specifier: KW_DOUBLE .

    $default  reduce using rule 80 (type_specifier)


state 8

   76 type_specifier: KW_SHORT .

    $default  reduce using rule 76 (type_specifier)


state 9

   78 type_specifier: KW_LONG .

    $default  reduce using rule 78 (type_specifier)


state 10

   81 type_specifier: KW_SIGNED .

    $default  reduce using rule 81 (type_specifier)


state 11

   82 type_specifier: KW_UNSIGNED .

    $default  reduce using rule 82 (type_specifier)


state 12

   83 type_specifier: KW_BOOL .

    $default  reduce using rule 83 (type_specifier)


state 13

   84 type_specifier: KW_COMPLEX .

    $default  reduce using rule 84 (type_specifier)


state 14

   85 type_specifier: KW_IMAGINARY .

    $default  reduce using rule 85 (type_specifier)


state 15

   93 struct_or_union_specifier: KW_STRUCT . IDENTIFIER
   95                          | KW_STRUCT . '{' struct_declaration_list '}'
   97                          | KW_STRUCT . IDENTIFIER '{' struct_declaration_list '}'

    IDENTIFIER  shift, and go to state 52
    '{'         shift, and go to state 53


state 16

   94 struct_or_union_specifier: KW_UNION . IDENTIFIER
   96                          | KW_UNION . '{' struct_declaration_list '}'
   98                          | KW_UNION . IDENTIFIER '{' struct_declaration_list '}'

    IDENTIFIER  shift, and go to state 54
    '{'         shift, and go to state 55


state 17

  108 enum_specifier: KW_ENUM . IDENTIFIER
  109               | KW_ENUM . '{' enumerator_list_opt '}'
  110               | KW_ENUM . IDENTIFIER '{' enumerator_list_opt '}'

    IDENTIFIER  shift, and go to state 56
    '{'         shift, and go to state 57


state 18

   18 storage_class_specifier: KW_TYPEDEF .

    $default  reduce using rule 18 (storage_class_specifier)


state 19

   30 alignment_specifier: KW_ALIGNAS . '(' type_specifier ')'
   31                    | KW_ALIGNAS . '(' INTEGER_CONSTANT ')'

    '('  shift, and go to state 58


state 20

   29 function_specifier: KW_NORETURN .

    $default  reduce using rule 29 (function_specifier)


state 21

   21 storage_class_specifier: KW_THREAD_LOCAL .

    $default  reduce using rule 21 (storage_class_specifier)


state 22

   27 type_qualifier: KW_ATOMIC .

    $default  reduce using rule 27 (type_qualifier)


state 23

   24 type_qualifier: KW_CONST .

    $default  reduce using rule 24 (type_qualifier)


state 24

   25 type_qualifier: KW_VOLATILE .

    $default  reduce using rule 25 (type_qualifier)


state 25

   26 type_qualifier: KW_RESTRICT .

    $default  reduce using rule 26 (type_qualifier)


state 26

   28 function_specifier: KW_INLINE .

    $default  reduce using rule 28 (function_specifier)


state 27

   19 storage_class_specifier: KW_EXTERN .

    $default  reduce using rule 19 (storage_class_specifier)


state 28

   20 storage_class_specifier: KW_STATIC .

    $default  reduce using rule 20 (storage_class_specifier)


state 29

   23 storage_class_specifier: KW_REGISTER .

    $default  reduce using rule 23 (storage_class_specifier)


state 30

   22 storage_class_specifier: KW_AUTO .

    $default  reduce using rule 22 (storage_class_specifier)


state 31

  165 static_assert_declaration: KW_STATIC_ASSERT . '(' conditional_expression ',' STRING_LITERAL ')' ';'

    '('  shift, and go to state 59


state 32

   88 type_specifier: KW_TYPEOF . '(' type_specifier ')'

    '('  shift, and go to state 60


state 33

   32 attribute_specifier: KW_ATTRIBUTE . '(' attribute_arg_list_opt ')'

    '('  shift, and go to state 61


state 34

   33 declspec_specifier: KW_DECLSPEC . '(' attribute_arg_list_opt ')'

    '('  shift, and go to state 62


state 35

    2 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 2 (translation_unit)


state 36

    4 external_declaration: declaration . ';'

    ';'  shift, and go to state 63


state 37

    7 declaration: declaration_specifiers . declarator_opt
    8            | declaration_specifiers . init_declarator_list
   10 declaration_specifiers: declaration_specifiers . declaration_specifier
  120 function_declspec: declaration_specifiers .

    KW_INT           shift, and go to state 64
    KW_CHAR          shift, and go to state 4
    KW_VOID          shift, and go to state 5
    KW_FLOAT         shift, and go to state 6
    KW_DOUBLE        shift, and go to state 7
    KW_SHORT         shift, and go to state 8
    KW_LONG          shift, and go to state 9
    KW_SIGNED        shift, and go to state 10
    KW_UNSIGNED      shift, and go to state 11
    KW_BOOL          shift, and go to state 12
    KW_COMPLEX       shift, and go to state 13
    KW_IMAGINARY     shift, and go to state 14
    KW_STRUCT        shift, and go to state 15
    KW_UNION         shift, and go to state 16
    KW_ENUM          shift, and go to state 17
    KW_TYPEDEF       shift, and go to state 18
    KW_ALIGNAS       shift, and go to state 19
    KW_NORETURN      shift, and go to state 20
    KW_THREAD_LOCAL  shift, and go to state 21
    KW_ATOMIC        shift, and go to state 22
    KW_CONST         shift, and go to state 23
    KW_VOLATILE      shift, and go to state 24
    KW_RESTRICT      shift, and go to state 25
    KW_INLINE        shift, and go to state 26
    KW_EXTERN        shift, and go to state 27
    KW_STATIC        shift, and go to state 28
    KW_REGISTER      shift, and go to state 29
    KW_AUTO          shift, and go to state 30
    KW_TYPEOF        shift, and go to state 32
    KW_ATTRIBUTE     shift, and go to state 33
    KW_DECLSPEC      shift, and go to state 34
    '*'              shift, and go to state 65

    IDENTIFIER  reduce using rule 49 (pointer_opt)
    IDENTIFIER  [reduce using rule 120 (function_declspec)]
    ';'         reduce using rule 46 (declarator_opt)
    $default    reduce using rule 49 (pointer_opt)

    declaration_specifier      go to state 66
    storage_class_specifier    go to state 39
    type_qualifier             go to state 40
    function_specifier         go to state 41
    alignment_specifier        go to state 42
    attribute_specifier        go to state 43
    declspec_specifier         go to state 44
    init_declarator_list       go to state 67
    init_declarator            go to state 68
    declarator_opt             go to state 69
    declarator                 go to state 70
    pointer_opt                go to state 71
    pointer                    go to state 72
    type_specifier             go to state 73
    struct_or_union_specifier  go to state 46
    enum_specifier             go to state 47


state 38

    9 declaration_specifiers: declaration_specifier .

    $default  reduce using rule 9 (declaration_specifiers)


state 39

   11 declaration_specifier: storage_class_specifier .

    $default  reduce using rule 11 (declaration_specifier)


state 40

   13 declaration_specifier: type_qualifier .

    $default  reduce using rule 13 (declaration_specifier)


state 41

   14 declaration_specifier: function_specifier .

    $default  reduce using rule 14 (declaration_specifier)


state 42

   15 declaration_specifier: alignment_specifier .

    $default  reduce using rule 15 (declaration_specifier)


state 43

   16 declaration_specifier: attribute_specifier .

    $default  reduce using rule 16 (declaration_specifier)


state 44

   17 declaration_specifier: declspec_specifier .

    $default  reduce using rule 17 (declaration_specifier)


state 45

   12 declaration_specifier: type_specifier .
  127 function_definition: type_specifier . declarator compound_statement

    '*'  shift, and go to state 65

    IDENTIFIER  reduce using rule 12 (declaration_specifier)
    IDENTIFIER  [reduce using rule 49 (pointer_opt)]
    '*'         [reduce using rule 12 (declaration_specifier)]
    '('         reduce using rule 12 (declaration_specifier)
    '('         [reduce using rule 49 (pointer_opt)]
    $default    reduce using rule 12 (declaration_specifier)

    declarator   go to state 74
    pointer_opt  go to state 71
    pointer      go to state 72


state 46
